# transcript-to-summary

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: .gitkeep  local-settings.example.json
data/input/: .gitkeep  sample_transcript.docx
data/output/: .gitkeep  sample_transcript_summary.docx
logs/: .gitkeep
reports/: junit.xml  report.html
src/transcript_to_summary/: __init__.py  cli.py  config.py  logger.py  reader.py  summarizer.py
tests/: conftest.py  test_reader.py  test_summarizer.py
tests/data/: sample.txt
